--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* Modal */
-.ReactModalPortal > div {
+.ReactModalPortal > div{
   opacity: 0;
 }
 
@@ -7,7 +7,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  transition: opacity 0.2s ease-in-out;
+  transition: opacity .2s ease-in-out;
   z-index: 999;
 }
 
@@ -39,11 +39,12 @@
   padding: 10px;
 }
 
+/* FABS */
 .fab {
   border-radius: 100%;
   bottom: 25px;
   font-size: 30px;
-  padding: 15px;
+  padding: 25px;
   position: fixed;
   right: 25px;
 }
@@ -51,7 +52,9 @@
 .fab-danger {
   border-radius: 100%;
   bottom: 25px;
-  font-size: 30px;
+  font-size: 22px;
   position: fixed;
   left: 25px;
+  width: 70px;
+  height: 70px;
 }
